[gd_scene load_steps=2 format=3 uid="uid://oc3pa4oswufp"]

[ext_resource type="Script" path="res://Scenes/Interface/PlayerStatus/PlayerResources.gd" id="1_p1xpu"]

[node name="PlayerResources" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1xpu")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 19.0
offset_right = 511.0
offset_bottom = 46.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 52.0
offset_right = 511.0
offset_bottom = 79.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="ManaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 87.0
offset_right = 513.0
offset_bottom = 114.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
